New Icons, Grid Nav Z-index issues

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,9 +16,10 @@
   </div>
   
   <nav>
-	<a href="{{site.baseurl}}"><span class="icon-clipboard"> </span> About </a>
-	<a href="{{site.baseurl}}/projects/"><span class="icon-briefcase"> </span> Projects </a>
-	<a href="mailto:{{site.email}}"target=_blank> <span class="icon-mail"> </span> Contact </a>
+	<a href="{{site.baseurl}}/"> <p><span class="icon-head"> </span> Personal</p> </a>
+	<a href="{{site.baseurl}}/projects/"><p><span class="icon-briefcase"> </span> Professional</p> </a>
+	<a href="{{site.baseurl}}/societal/"><p><span class="icon-globe"> </span> Societal</p> </a>
+	<a href="mailto:{{site.email}}"target=_blank> <p><span class="icon-mail"> </span> Contact</p> </a>
   </nav>
   
 
