--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,12 +80,20 @@
 	  </ul>
 
 	 
-   <p>{{ site.description }}</p>
-   <p class="rss-subscribe"> <a href="{{ "/feed.xml" | prepend: site.baseurl }}"><span class="icon-rss"></span> Subscribe via RSS</a></p>
+   
+   <!-- <p class="rss-subscribe">
+	   <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
+	   	<span class="icon-rss"></span> <br>
+		Subscribe via RSS
+   	   </a>
+	</p> -->
  </div>
+ 
+
  
  <div class="copyright">
  	All content &copy; Alex Bloom 2010&ndash;2014
+	 <p>{{ site.description }}</p>
  </div>
  
  
@@ -100,11 +108,19 @@
 //var b = Math.floor(Math.random() * 255) + 1
 //	$('body').css(background:rgb(r,g,b,);)
 	
-	
-	var hue = 'rgb(' + (Math.floor(Math.random() *(255-150+1)+150)) + ',' + (Math.floor(Math.random() *(255-150+1)+150)) + ',' + (Math.floor(Math.random() *(255-150+1)+150)) + ')';
+	// Random Bakground Color for Home Page
+	var hue = 'rgb(' + (Math.floor(Math.random() *(230-150+1)+150)) + ',' + (Math.floor(Math.random() *(230-150+1)+150)) + ',' + (Math.floor(Math.random() *(230-150+1)+150)) + ')';
 	
 	$('body.index').css("background",hue)
 	
+	// Open / Close Nav
+	$('.site-header nav').addClass('closed');
+	$('.site-header #logo').click(function(){
+		$('#logo').toggleClass('open');
+		$('.site-header nav').toggleClass('closed');
+		$('body').toggleClass('overflow-hidden');
+	});
+		
 </script>
 
 <script>
