--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -123,15 +123,18 @@ h6{
  */
 
 a {
-    color: $text-color;
-    text-decoration: none;
-	border-bottom: 1px dotted $brand-color;
+    color: $black;
+    text-decoration: underline;
+	//border-bottom: 1px dotted $brand-color;
     &:visited {
-
+		text-decoration:line-through!important;
     }
     &:hover {	
-        color: $brand-color;
+        color: $text-color;
     }
+	&:visited{
+		
+	}
 }
 
 /**
@@ -147,7 +150,7 @@ blockquote {
 	letter-spacing: .01em;
     font-style: italic;
 	@media screen and(min-width:$desktop){
-		margin:1em -25%;
+		//margin:1em -25%;
 	}
     > :last-child {
         margin-bottom: 0;
@@ -159,9 +162,8 @@ blockquote {
  */
 
 figure {
-	display:inline-block;
-	//width:40%;
-	max-width:(em(600));
+	display:block;
+	//max-width:(em(600));
 	background-color:$white;
 	border-top:1rem solid $white;
 	border-left:1rem solid $white;
@@ -169,6 +171,9 @@ figure {
 	box-shadow:0px 0px 8px $grey;
 	padding:0;
 	margin:4em auto;
+	
+	@extend %max-width-content-block;
+	
 	img{
 		margin:0 auto;
 	}
@@ -203,14 +208,14 @@ figure {
 	margin:2em auto;
 	box-sizing: border-box;
 	@media screen and (min-width:$tablet){
-		border:1.75em solid black;
+		border:2em solid black;
 		border-radius:1.5em;
 		-webkit-border-radius:1.5em;
 		-moz-border-radius:1.5em;
 	}
 }
 .device{
-	@extend %device
+	@extend %device;
 }
 
 /**
